<resources>
    <string name="app_name">EAI Zebra 3 Demo</string>


    <string name="action_settings">Add a Printer</string>

    <string name="zebra_technologies_corp">Zebra Technologies Corp.</string>
    <string name="zebra_address_line_1"><b>ISV TEAM</b> - DEVKITCHEN PRINT DNA</string>
    <string name="zebra_address_line_2">Visit <a href="https://developer.zebra.com/welcome">developer.zebra.com</a> for more support.</string>

    <string name="Title"><font size="18">Add printer data?</font></string>


    <string name="Battery"><font size="16">Battery</font>\n\<font size="10">Battery data and configurations.</font></string>
    <string name="Media"><font size="16">Media</font>\n\<font size="10">Media data and configurations.</font></string>
    <string name="Device"><font size="16">Device</font>\n\<font size="10">View this printers battery data.</font></string>
    <string name="Test"><font size="16">Print</font>\n\<font size="10">View this printers battery data.</font></string>
    <string name="Security"><font size="16">Security</font>\n\<font size="10">View this printers battery data.</font></string>
    <string name="Explore"><font size="16">Explore</font>\n\<font size="10">View this printers battery data.</font></string>
    <string name="Quick"><font size="16">Quick Save</font>\n\<font size="10">View this printers battery data.</font></string>


    <string name="print">Print</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="printer_status">Printer Status</string>
    <string name="rotation_prompt">Choose a rotation</string>
    <string name="image_selection">Select an Image</string>

    <string name="store_check">Check to store on printer</string>
    <string name="path_hint">Path to store on printer</string>
    <string name="printer_selection">Select a Printer</string>
    <string name="discovered_printers">Discovered printers</string>
    <string name="searching_for_printers">Searching for printers&#8230;</string>
    <string name="connecting_to_printer">Connecting to printer&#8230;</string>
    <string name="printer_connected">Printer connected</string>
    <string name="printer_connection_failed">Printer connection failed</string>
    <string name="connected_to_printer">Connected to printer:</string>
    <string name="connection_error">Connection error</string>
    <string name="print_successful">Print successful</string>
    <string name="print_failed">Print failed:</string>
    <string name="printer_paused">Printer paused</string>
    <string name="head_open">Head open</string>
    <string name="paper_out">Paper out</string>
    <string name="cannot_print">Cannot print</string>
    <string name="no_printers_found">No printers found</string>
    <string name="title_activity_eai__security__settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_eai_security_managment">eai_security_managment</string>
    <string name="title_activity_printer_discovery">activity_printerDiscovery</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="Security_Prompt">Choose a BLT Security Level</string>

    <string-array name = "speedOptions">
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.0</item>
        <item>2.1</item>
        <item>2.2</item>
        <item>2.3</item>
        <item>2.4</item>
        <item>2.5</item>
        <item>2.6</item>
        <item>2.7</item>
        <item>2.8</item>
        <item>2.9</item>
        <item>3.0</item>
        <item>3.1</item>
        <item>3.2</item>
        <item>3.3</item>
        <item>3.4</item>
        <item>3.5</item>
        <item>3.6</item>
        <item>3.7</item>
        <item>3.8</item>
        <item>3.9</item>
        <item>4.0</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.3</item>
        <item>4.4</item>
        <item>4.5</item>
        <item>4.6</item>
        <item>4.7</item>
        <item>4.8</item>
        <item>4.9</item>
        <item>5.0</item>

    </string-array>


    <string-array name="securityMode_Options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>

    <string-array name="bltSecurity_Options">
        <item>None</item>
        <item>unauth_key_encrypt</item>
        <item>auth_key_encrypt</item>

    </string-array>


    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <!-- Strings for Battery Managment -->
    <string name="s.batteryVoltage">Battery Voltage</string>
    <string name="s.batteryPercentFull">Battery Percent Full</string>
    <string name="s.batteryStatus">Battery Status</string>
    <string name="s.batteryHealth">Battery Health</string>
    <string name="s.batteryRecharge">Battery Recharge</string>
    <string name="s.batterySleepMode">Sleep Mode</string>






    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">Current Printers</string>
    <string name="lbl_new_note_title">Add This Printer?</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Add your printer!</string>

    <string-array name="printers">
        <item >Pro Constructive</item>
        <item >Con Constructive</item>
        <item >1st Speaker Cross</item>
        <item >Pro Rebbutal</item>
        <item >Con Rebuttal</item>
        <item >2nd Speaker Cross</item>
        <item >Pro Summary</item>
        <item >Con Summary</item>
        <item >Grand Cross</item>
        <item >Pro Final Focus</item>
        <item >Con Final Focus</item>
    </string-array>

    <!-- Strings for Media Managment -->



    <!-- Strings for Device Managment -->

    <string-array name="bluetoothModes">
        <item>both</item>
        <item>le</item>
        <item>classic</item>
    </string-array>


    <!-- Strings for Security Managment -->
    <string name="Mac_Address">Mac Address</string>
    <string name="Date_Saved">Date Saved</string>


    <string name="Voltage">Voltage</string>
    <string name="Charge">Charge</string>
    <string name="Status">Status</string>
    <string name="Health">Health</string>
    <string name="Recharge">Recharge</string>
    <string name="Sleep_Mode">Sleep Mode</string>


    <string name="Media_Speed">Media Speed</string>
    <string name="Media_Type">Media Type</string>
    <string name="Media_Length">Media Length</string>
    <string name="Ribbon">Ribbon</string>
    <string name="Marker">Marker</string>
    <string name="Printed_Labels">Printed Labels</string>


    <string name="Friendly_Name">Friendly Name</string>
    <string name="BT_Controller">BT Controller</string>
    <string name="Model">Model</string>
    <string name="Language">Language</string>
    <string name="Firmware_Version">Firmware Version</string>
    <string name="LinkOS_Version">LinkOS Version</string>


    <string name="Security_Mode">Security Mode</string>
    <string name="Min_Security">Min Security</string>
    <string name="HTTPS">HTTPS</string>
    <string name="HTTP">HTTP</string>
    <string name="FTP">FTP</string>
    <string name="SMTP">SMTP</string>
    <string name="LPD">LPD</string>
    <string name="UDP">UDP</string>




</resources>
